--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -180,7 +180,7 @@ video {
   background: var(--dark-clr2);
   color: var(--text-clr1);
   width: 300px;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .statusFilter {
@@ -384,6 +384,7 @@ video {
   border: 1px solid rgba(255,255,255,0.06);
   background: var(--dark-clr2);
   color: var(--text-clr1);
+  font-size: 16px;
 }
 
 .codeInputSect button {
